# scop

./: .gitignore  Cargo.toml  build.rs
shaders/: shader.frag  shader.vert
src/: error.rs  input_manager.rs  lib.rs  main.rs  obj.rs  ppm.rs  ubo.rs  util.rs  vertex.rs
src/math/: matrix.rs  mod.rs  vector.rs
src/vulkan/: command_buffer.rs  device.rs  instance.rs  mod.rs  queue_family_indices.rs  renderer.rs  surface_object_manager.rs  sync_object_store.rs  texture.rs
