[package]
name = "scop"
version = "0.1.0"
edition = "2021"
default-run = "scop"
publish = false
authors = ["Tuomas Jääsalo", "tuomas.jaasalo@alceon.fi"]

[[bin]]
name = "scop"
path = "src/main.rs"

[[bin]]
name = "obj_info"
path = "src/bin/obj_info.rs"

[dependencies]
glfw = { version = "0.58.0", features = ["vulkan"] }
ash = { version =  "0.38.0", features = ["loaded"] }

